<resources>
    <string name="app_name">My notes</string>
    <string name="app_name_ru">Мои заметки</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number">№</string>
    <string name="note">Заметка</string>
    <string name="date_and_time">Дата и время</string>
    <string name="enter_text_of_note">Введите текст заметки</string>
    <string name="save">Сохранить</string>
    <string name="exit">Выход</string>
    <string name="edit">Редактировать</string>
</resources>